RESOLVED FIXED128442
IDB: storage/indexeddb/mozilla/versionchange-abort.html fails
https://bugs.webkit.org/show_bug.cgi?id=128442
Summary IDB: storage/indexeddb/mozilla/versionchange-abort.html fails
Brady Eidson
Reported 2014-02-07 22:15:16 PST
IDB: storage/indexeddb/mozilla/versionchange-abort.html fails When the database metadata has the special "no version set yet" version of INT64_MAX, we need to return 0 to the bindings. Not INT64_MAX.
Attachments
Patch v1 (5.22 KB, patch)
2014-02-07 22:19 PST, Brady Eidson
no flags
Patch v2 - Decided against adding all the other tests at once as I believe there's some strange interactions. (3.16 KB, patch)
2014-02-08 15:35 PST, Brady Eidson
mitz: review+
Radar WebKit Bug Importer
Comment 1 2014-02-07 22:15:47 PST
Brady Eidson
Comment 2 2014-02-07 22:19:24 PST
Created attachment 223549 [details] Patch v1
Brady Eidson
Comment 3 2014-02-08 15:35:58 PST
Created attachment 223590 [details] Patch v2 - Decided against adding all the other tests at once as I believe there's some strange interactions.
Brady Eidson
Comment 4 2014-02-08 15:57:42 PST
Ryosuke Niwa
Comment 5 2014-02-08 19:33:14 PST
Landed a EFL build fix in http://trac.webkit.org/changeset/16373.
Brady Eidson
Comment 6 2014-02-08 21:48:25 PST
Sorry for the breakage, that's what losing EWS does... (In reply to comment #5) > Landed a EFL build fix in http://trac.webkit.org/changeset/16373. I think you meant http://trac.webkit.org/changeset/163736 I'm shocked that fix is necessary... anybody have a link to the build failure? On the surface that fix suggests to me the EFL compiler is inadequate.
Ryosuke Niwa
Comment 7 2014-02-09 00:11:55 PST
http://build.webkit.org/builders/EFL%20Linux%2032-bit%20Release%20%28Build%29/builds/26631/steps/compile-webkit/logs/stdio /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebCore/Modules/indexeddb/IDBDatabase.cpp: In member function 'uint64_t WebCore::IDBDatabase::version() const': /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebCore/Modules/indexeddb/IDBDatabase.cpp:140:112: error: enumeral and non-enumeral type in conditional expression [-Werror]
Note You need to log in before you can comment on or make changes to this bug.