IDB: storage/indexeddb/mozilla/versionchange-abort.html fails <rdar://problem/16018887> and https://bugs.webkit.org/show_bug.cgi?id=128442

Reviewed by Dan Bernstein.

Source/WebCore:

Tested by storage/indexeddb/mozilla/versionchange-abort.html (and probably others)

* Modules/indexeddb/IDBDatabase.cpp:
(WebCore::IDBDatabase::version): If the version is NoIntVersion, return DefaultIntVersion to script.

LayoutTests:

* platform/mac-wk2/TestExpectations: Enable the test.
  Also add all the other storage/indexeddb/mozilla test with expectations as they
  are what I’m focusing on right now.

Canonical link: https://commits.webkit.org/146497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163729 268f45cc-cd09-0410-ab3c-d52691b4dbfc